Changelog
=========

0.2dev (unreleased)
-------------------

- no changes yet

0.1 (2010-05-29)
-------------------

- Initial release
  [seletz]